# Big_Num_Calculator

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Components/: BasicNumpad.qml  MenuItem.qml  NumpadButton.qml  SideMenuItem.qml
Modules/: backend.cpp  backend.h  backhelper.cpp  backhelper.h  fileopener.cpp  fileopener.h
